--- a/MirlindMuaremiCard/index1.html
+++ b/MirlindMuaremiCard/index1.html
@@ -13,7 +13,7 @@
             <img class="img-top" src="./images/bg-pattern-top.svg" alt="Image top"/>
             <div class="card">
                 <div class="card_header">
-                    <img class="card_img" src="./images/bg-pattern-card.svg" alt="Image of Banner"/>
+                    <img class="card__img" src="./images/bg-pattern-card.svg" alt="Image of Banner"/>
                     <div class="card__content-img">
                         <img class="card__img-profile" src="./images/image-victor.jpg" alt="Image of profile">
                     </div>
@@ -43,7 +43,7 @@
             <img src="./images/bg-pattern-bottom.svg" alt="Image bottom" class="img-bottom"/>
             </div>
             <div class="attribution">
-                <p class="">Challenge by Mirlind Muaremi <a href="https://github.com/mirlind20" target="_blank">GitHub link</a>.</p>
+                <p class="">Challenge by Mirlind Muaremi <a href="https://github.com/mirlind20/portofolio" target="_blank">GitHub link</a>.</p>
             </div>
         </div>
     </body>
